test/fail/classes/class_prop_method_redecl.lly
#[
SyntaxError: A method in class 'Test' already has the name 'abc'.
Where: File "class_prop_method_redecl.lly" at line 10
]#

class Test() {
    define abc() {

    }
    var @abc = 10
}
